--- a/agile_transition.html
+++ b/agile_transition.html
@@ -34,7 +34,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a class="nav-link" href="featured.html">Featured</a></li>
-                <li><a class="nav-link" href="limks.html">Links</a></li>
+                <li><a class="nav-link" href="links.html">Links</a></li>
             </ul>
         </div>
     </nav>
