--- a/links.html
+++ b/links.html
@@ -69,9 +69,23 @@
    
     </section>
         <hr />
+     <div class="row">
+         <div class="col">
+             <div class="video-responsive">
+                 <iframe src="https://www.youtube.com/embed/T9d8w-OG-Fk" frameborder="0" allowfullscreen></iframe>
+             </div>
+         </div>
+         <div class="col">
+             <h4>Remote Teams</h4>
+             <p class="text">"Great teams need mental closeness, not physical closeness"</p>
+         </div>
+     </div>
+     <hr />
     <div class="row">
         <div class="col">
-                <iframe width="500" height="300"  src="https://www.youtube.com/embed/Vyn_xLrtZaY" frameborder="0" allowfullscreen></iframe>
+            <div class="video-responsive">
+                <iframe src="https://www.youtube.com/embed/Vyn_xLrtZaY" frameborder="0" allowfullscreen></iframe>
+            </div>
         </div>
         <div class="col">
         <h4>Why teamwork matters</h4>
@@ -82,7 +96,7 @@
      <div class="row">
          <div class="col">
              <div class="video-responsive">
-                 <iframe width="420" height="315" src="https://www.youtube.com/embed/qp0HIF3SfI4" frameborder="0" allowfullscreen></iframe>
+                 <iframe src="https://www.youtube.com/embed/qp0HIF3SfI4" frameborder="0" allowfullscreen></iframe>
              </div>
          </div>
          <div class="col">
@@ -93,8 +107,9 @@
      <hr />
      <div class="row">
          <div class="col">
-             <div>
-                 <iframe width="500" height="300" src="https://www.youtube.com/embed/6NHl5Q8zWNY" frameborder="0" allowfullscreen></iframe></div>
+             <div class="video-responsive">
+                 <iframe src="https://www.youtube.com/embed/6NHl5Q8zWNY" frameborder="0" allowfullscreen></iframe>
+             </div>
          </div>
          <div class="col">
              <h4>The Secrets of Kick-ass Software Development at Atlassian</h4>
@@ -103,8 +118,9 @@
      <hr />
      <div class="row">
          <div class="col">
-             <div>
-                 <iframe width="500" height="300" src="https://www.youtube.com/embed/Z9QbYZh1YXY" frameborder="0" allowfullscreen></iframe>    </div>
+             <div class="video-responsive">
+                 <iframe src="https://www.youtube.com/embed/Z9QbYZh1YXY" frameborder="0" allowfullscreen></iframe>
+             </div>
          </div>
          <div class="col">
              <h4>What is agile?</h4>
