add imprint and linked pages

--- a/agile_transition.html
+++ b/agile_transition.html
@@ -175,6 +175,14 @@
             ga('send', 'pageview');
 
         </script>
-
+        <br />
+        <br />
+        <div class="container">
+            <p>
+                <a class="text" href="imprint.html">
+                    Imprint and Data Protection
+                </a>
+            </p>
+        </div>
 </body>
 </html>
