--- a/agile_transition.html
+++ b/agile_transition.html
@@ -11,18 +11,18 @@
     <script src="https://use.fontawesome.com/070b03f966.js"></script>
     <script type="text/javascript" src="assets/js/lib/jquery-3.2.1.slim.min.js"></script>
     <script>
-                (function (i, s, o, g, r, a, m) {
-                    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                        (i[r].q = i[r].q || []).push(arguments)
-                    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-                        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-                })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject'] = r;i[r]=i[r]||function(){
+                (i[r].q = i[r].q || []).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
                 ga('create', 'UA-102848389-1', 'auto');
+                ga('require', 'displayfeatures');
+                ga('require', 'linkid', 'linkid.js');
                 ga('set', 'anonymizeIp', true);
                 ga('send', 'pageview');
-
     </script>
+
 </head>
 <body>
     <nav class="navbar navbar-toggleable-md navbar-light bg-faded fixed-top">
