add modal info to all pages

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            ...
+                            internadine@outlook.com
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-outline-success" data-dismiss="modal">Close</button>
