--- a/agile_transition.html
+++ b/agile_transition.html
@@ -72,7 +72,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            ...
+                            internadine@outlook.com
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
