--- a/links.html
+++ b/links.html
@@ -71,7 +71,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            ...
+                            internadine@outlook.com
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
