add featured page, colorpicker game and todo-project, updated navbar deleted #, updated script for ga on agile transtion

--- a/featured.html
+++ b/featured.html
@@ -39,14 +39,14 @@
                     <a class="nav-link" href="index.html">Agile Remote Teams</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Agile Transition<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="agile_transition.html">Agile Transition<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="special_events.html">Agile Special Events</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a class="nav-link" href="featured.html">Featured</a></li>
+                <li class="active"><a class="nav-link">Featured</a></li>
                 <li><a class="nav-link" href="links.html">Links</a></li>
             </ul>
         </div>
@@ -90,7 +90,49 @@
             <br />
         </div>
         <hr />
-
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="img-thumbnail">
+                        <a href="colorgame.html"><img src="assets/img/color_game.png" alt="Color picker game"></a>
+                    </div>
+                </div>
+                <div class="col-lg-8">
+                    <h4><a href="colorGame.html" class="text"> Color Picker Game</a></h4>
+                    <p></p>
+                    <p class="text">This is an RGB color picker game made with HTML, CSS and JavaScript/jQuery.</p>
+                    <p class="text">Try to guess the right color for the RGB Code shown above. </p>
+                </div>
+            </div>
+            <hr />
+            <div class="row">
+                <div class="col-lg-8">
+                    <h4><a href="todos.html" class="text">ToDo List</a> </h4>
+                    <p></p>
+                    <p class="text">This is a very simmple but usefull To-Do-List. Your can add items, mark them done and also delete them from your list.  </p>
+                    <p class="text">The list has been created using jQuery, Event-listeners and DOM manipulation.</p>
+                </div>
+                <div class="col-lg-4 flex-first flex-lg-unordered">
+                    <div class="img-thumbnail">
+                      <a href="todos.html"><img src="assets/img/todo_list.png" alt="ToDo List"></a>  
+                    </div>
+                </div>
+            </div>
+            <hr />
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="img-thumbnail">
+                        <img src="assets/img/nadinetraining.jpg" alt="Scrum Training">
+                    </div>
+                </div>
+                <div class="col-lg-8">
+                    <h4>Meet me</h4>
+                    <p></p>
+                    <p class="text"> New Management Practices (e.g DevOps or Agile) help to develop new innovations much faster and also contribute to a more satisfying work environment. My everyday goal is to inspire people to think ahead, embrace change and also create a better future for all of us. </p>
+                    <p class="text">Your can also meet me on <a class="text" href=https://www.linkedin.com/in/internadine/">LinkedIn</a> or <a href="https://www.xing.com/profile/Nadine_Wischmeier" class="text">Xing</a>. </p>
+                </div>
+            </div>
+        </div>
     <div class="container">
         <img class="logo" src="assets/brand/Logo-Nadine.png" alt="Logo Wischmeier" />
 
