--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Agile Remote Teams<span class="sr-only">(current)</span></a>
+                    <a class="nav-link">Agile Remote Teams<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="agile_transition.html">Agile Transition</a>
@@ -71,7 +71,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            ...
+                            internadine@outlook.com
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
