--- a/links.html
+++ b/links.html
@@ -46,7 +46,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a class="nav-link" href="featured.html">Featured</a></li>
-                <li class="active"><a class="nav-link" href="#">Links</a></li>
+                <li class="active"><a class="nav-link">Links</a></li>
             </ul>
         </div>
     </nav>
