--- a/special_events.html
+++ b/special_events.html
@@ -41,7 +41,7 @@
                     <a class="nav-link" href="agile_transition.html">Agile Transition</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Agile Special Events<span class="sr-only">(current)</span></a>
+                    <a class="nav-link">Agile Special Events<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
