--- a/featured.html
+++ b/featured.html
@@ -94,7 +94,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="img-thumbnail">
-                        <a href="colorgame.html"><img src="assets/img/color_game.png" alt="Color picker game"></a>
+                        <a href="colorGame.html"><img src="assets/img/color_game.png" alt="Color picker game"></a>
                     </div>
                 </div>
                 <div class="col-lg-8">
