add back button to colorGame and ToDo List

--- a/todos.html
+++ b/todos.html
@@ -11,7 +11,7 @@
 
 <body>
 	<div id="container">
-		<h1>ToDo List<i class="fa fa-plus" aria-hidden="true"></i></h1>
+		<h1>To-Do List<i class="fa fa-plus" aria-hidden="true"></i></h1>
 		<input type="text" placeholder="Add new ToDo">
 		<ul>
 			<li><span><i class="fa fa-trash"></i></span> Walk the dogs</li>
@@ -19,8 +19,12 @@
 			<li><span><i class="fa fa-trash"></i></span> Take a shower</li>
 			<li><span><i class="fa fa-trash"></i></span> Start PC</li>
 		</ul>
-
 	</div>
+    <div id="container">
+        <ul>
+            <li><span><i class="fa fa-backward" aria-hidden="true"></i></span> <a href="featured.html">Back to "internadine"</a></li>
+        </ul>
+    </div>
 	<script type="text/javascript" src="assets/js/todos.js"></script>
 
 </body>
