--- a/colorGame.html
+++ b/colorGame.html
@@ -16,6 +16,7 @@
 	<span id="message"></span>
 	<button id="easyBtn">Easy</button>
 	<button id="hardBtn" class="selected">Hard</button>
+    <button id="hardBtn"> <a href="featured.html" class="back">Back to internadine</a></button>
 </div>
 <div id="container">
 	<div class="square"></div>
