add scrum app beta to featured

--- a/featured.html
+++ b/featured.html
@@ -92,6 +92,20 @@
         <hr />
         <div class="container">
             <div class="row">
+                <div class="col-lg-8">
+                    <h4><a href="https://play.google.com/apps/testing/com.app.scrumtest" class="text">Scrum on the Run - Beta</a> </h4>
+                    <p></p>
+                    <p class="text">This App can help you to prepare for the final Scrum Master Exam. It simulates exam conditions. If you don't pass, read the Scrum Guide and try again... and again ...</p>
+                    <p class="text">Download my Scrum Training App <a href="https://play.google.com/apps/testing/com.app.scrumtest">Playstore</a> and tell me what you think!</p>
+                </div>
+                <div class="col-lg-4 flex-first flex-lg-unordered">
+                    <div class="img-thumbnail">
+                        <a href="todos.html"><img src="assets/img/screenshot3.png" height="300px" width="150px" alt="App Screenshot"></a>
+                    </div>
+                </div>
+            </div>
+            <hr />
+            <div class="row">
                 <div class="col-lg-4">
                     <div class="img-thumbnail">
                         <a href="colorGame.html"><img src="assets/img/color_game.png" alt="Color picker game"></a>
