add scrum master video tutorial to featured

--- a/featured.html
+++ b/featured.html
@@ -91,6 +91,20 @@
         </div>
         <hr />
         <div class="container">
+                <div class="row">
+                        <div class="col-lg-4">
+                            <div class="img-thumbnail">
+                                <a href="https://youtu.be/gePHfpUvWAU"><img src="assets/img/scrum_master_video.png" alt="Color picker game"></a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8">
+                            <h4><a href="https://youtu.be/gePHfpUvWAU" class="text"> Scrum Master Video Training</a></h4>
+                            <p></p>
+                            <p class="text"><a href="https://youtu.be/gePHfpUvWAU"> Watch an example <a/>of my well known Scrum Master Tutorial (in GERMAN). It has prepared hundreds of students for the Professional Scrum Master Certificate (at Scrum.org)  </p>
+                            <p class="text">Please feel free to contact us, if you wish to embedd the full tutorial into your company LMS and train your employees to become Scrum certified.</p>
+                        </div>
+                    </div>
+                    <hr />
             <div class="row">
                 <div class="col-lg-8">
                     <h4><a href="https://play.google.com/apps/testing/com.app.scrumtest" class="text">Scrum on the Run - Beta</a> </h4>
